@@ -190,7 +190,7 @@
 /* #undef HAVE_GETTEXT */
 
 /* Define if you have the iconv() function and it works. */
-/* #undef HAVE_ICONV */
+#define HAVE_ICONV 1
 
 /* Define to 1 if you have the <inttypes.h> header file. */
 #define HAVE_INTTYPES_H 1
@@ -684,7 +684,7 @@
 /* #undef HAVE__NSGETEXECUTABLEPATH */
 
 /* Define as const if the declaration of iconv() needs const. */
-/* #undef ICONV_CONST */
+#define ICONV_CONST 
 
 /* Define to the value of ${prefix}, as a string. */
 #define INSTALLPREFIX "/opt/Wive-RTNL/lib/libiconv/filesystem"
