@@ -63,7 +63,7 @@
 #define MTD_KERN2_PART_SIZE	MTD_KERN_PART_SIZE
 #define MTD_KERN2_PART_OFFSET	IMAGE1_SIZE + (MTD_RWFS_PART_SIZE + MTD_BOOT_PART_SIZE + MTD_CONFIG_PART_SIZE + MTD_FACTORY_PART_SIZE)
 #ifdef CONFIG_RT2880_ROOTFS_IN_FLASH
-#define MTD_ROOTFS2_PART_SIZE 	MTD_ROOTFS_PART_SIZE	
+#define MTD_ROOTFS2_PART_SIZE 	MTD_ROOTFS_PART_SIZE
 #define MTD_ROOTFS2_PART_OFFSET (MTD_KERN2_PART_OFFSET + MTD_KERN2_PART_SIZE)
 #endif
 #endif /* CONFIG_DUAL_IMAGE */
